Texture with alpha channel doesn't preview correctly. #77356

Closed
opened 2020-06-04 10:41:27 +02:00 by Blendy · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-29 18:08, hash: 2ee94c954d
Worked: 2.79
Short description of error
Texture with alpha channel doesn't preview correctly. But Blender 2.79 works fine.

Exact steps for others to reproduce the error
Just load a brush texture with alpha channel and turn on the Alpha option. The texture preview looks incorrect. Whereas the stencil texture looks correct in the 3d viewport.
alpha_preview_bug.png

The texture for test:
test texture.zip

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-29 18:08, hash: `2ee94c954d` Worked: 2.79 **Short description of error** Texture with alpha channel doesn't preview correctly. But Blender 2.79 works fine. **Exact steps for others to reproduce the error** Just load a brush texture with alpha channel and turn on the Alpha option. The texture preview looks incorrect. Whereas the stencil texture looks correct in the 3d viewport. ![alpha_preview_bug.png](https://archive.blender.org/developer/F8576082/alpha_preview_bug.png) The texture for test: [test texture.zip](https://archive.blender.org/developer/F8576382/test_texture.zip)
Author

Added subscriber: @Rays-Lv

Added subscriber: @Rays-Lv
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Mind sharing that PNG of yours?
Shouldnt it say RGBA byte if it has alpha?

image.png

Mind sharing that PNG of yours? Shouldnt it say `RGBA byte` if it has alpha? ![image.png](https://archive.blender.org/developer/F8576247/image.png)
Author

In #77356#944601, @lichtwerk wrote:
Mind sharing that PNG of yours?
Shouldnt it say RGBA byte if it has alpha?

image.png

Actually it has alpha channel. I've uploaded it now.

> In #77356#944601, @lichtwerk wrote: > Mind sharing that PNG of yours? > Shouldnt it say `RGBA byte` if it has alpha? > > ![image.png](https://archive.blender.org/developer/F8576247/image.png) Actually it has alpha channel. I've uploaded it now.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Thx getting back, I see now, checking...

Thx getting back, I see now, checking...
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-06-04 17:32:32 +02:00
Member

Since 329b4c3363 a texture preview is not rendered through the preview.blend and a renderengine anymore [unlike materials etc.]
Alpha wasnt handled in that commit [at least not like expected], will check more and confirm for now.

Since 329b4c3363 a texture preview is not rendered through the preview.blend and a renderengine anymore [unlike materials etc.] Alpha wasnt handled in that commit [at least not like expected], will check more and confirm for now.

This issue was referenced by 82f51fe913

This issue was referenced by 82f51fe9132f50d10f1263e97ecde9655af97671
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77356
No description provided.